refactor(service): reduce UserStoryServiceImpl complexity from 31 to 12 by extracting helper and validator classes