@@ -1,42 +1,37 @@
 package ma.ensa.apms.service.impl;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import ma.ensa.apms.annotation.LogOperation;
 import ma.ensa.apms.dto.Request.UserStoryRequest;
 import ma.ensa.apms.dto.Response.AcceptanceCriteriaResponse;
 import ma.ensa.apms.dto.Response.UserStoryResponse;
-import ma.ensa.apms.exception.BusinessException;
-import ma.ensa.apms.exception.ResourceNotFoundException;
 import ma.ensa.apms.mapper.AcceptanceCriteriaMapper;
 import ma.ensa.apms.mapper.UserStoryMapper;
-import ma.ensa.apms.modal.AcceptanceCriteria;
 import ma.ensa.apms.modal.Epic;
 import ma.ensa.apms.modal.SprintBacklog;
 import ma.ensa.apms.modal.UserStory;
 import ma.ensa.apms.modal.enums.UserStoryStatus;
-import ma.ensa.apms.repository.EpicRepository;
-import ma.ensa.apms.repository.ProductBacklogRepository;
-import ma.ensa.apms.repository.SprintBacklogRepository;
 import ma.ensa.apms.repository.UserStoryRepository;
 import ma.ensa.apms.service.UserStoryService;
+import ma.ensa.apms.service.helper.UserStoryRepositoryHelper;
+import ma.ensa.apms.service.validator.UserStoryValidator;
 
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class UserStoryServiceImpl implements UserStoryService {
 
-    private UserStoryRepository userStoryRepository;
-    private UserStoryMapper userStoryMapper;
-    private ProductBacklogRepository productBacklogRepository;
-    private SprintBacklogRepository sprintBacklogRepository;
-    private EpicRepository epicRepository;
-    private AcceptanceCriteriaMapper acceptanceCriteriaMapper;
+    private final UserStoryRepository userStoryRepository;
+    private final UserStoryMapper userStoryMapper;
+    private final AcceptanceCriteriaMapper acceptanceCriteriaMapper;
+    private final UserStoryRepositoryHelper repositoryHelper;
+    private final UserStoryValidator validator;
 
     /**
      * Create a new user story
@@ -66,9 +61,7 @@ public class UserStoryServiceImpl implements UserStoryService {
     @Override
     @Transactional
     public UserStoryResponse updateUserStory(UUID id, UserStoryRequest dto) {
-        UserStory us = userStoryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("User story not found"));
-
+        UserStory us = repositoryHelper.findUserStoryById(id);
         userStoryMapper.updateEntityFromDto(dto, us);
         userStoryRepository.save(us);
         return userStoryMapper.toResponse(us);
@@ -84,8 +77,7 @@ public class UserStoryServiceImpl implements UserStoryService {
     @Override
     @LogOperation(description = "Retrieving user story by ID")
     public UserStoryResponse getUserStoryById(UUID id) {
-        UserStory us = userStoryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("User story not found"));
+        UserStory us = repositoryHelper.findUserStoryById(id);
         return userStoryMapper.toResponse(us);
     }
 
@@ -100,18 +92,10 @@ public class UserStoryServiceImpl implements UserStoryService {
     @Override
     @Transactional
     public UserStoryResponse changeStatus(UUID id, UserStoryStatus newStatus) {
-        UserStory story = userStoryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("User story not found"));
-
+        UserStory story = repositoryHelper.findUserStoryById(id);
         if (newStatus == UserStoryStatus.DONE) {
-            boolean allMet = story.getAcceptanceCriterias().stream()
-                    .allMatch(AcceptanceCriteria::isMet);
-
-            if (!allMet) {
-                throw new BusinessException("All acceptance criteria must be met to mark as DONE.");
-            }
+            validator.validateCanMarkAsDone(story);
         }
-
         story.setStatus(newStatus);
         return userStoryMapper.toResponse(userStoryRepository.save(story));
     }
@@ -123,18 +107,14 @@ public class UserStoryServiceImpl implements UserStoryService {
      * @param epicId  the id of the epic to link
      * @return the linked user story
      * @throws ResourceNotFoundException if the user story or epic is not found
-     * @throws BusinessException         if the user story is not in TODO status
+     * @throws BusinessException         if the user story is not in TO_DO status
      */
     @Override
     @Transactional
     public UserStoryResponse linkToEpic(UUID storyId, UUID epicId) {
-        UserStory story = userStoryRepository.findById(storyId)
-                .orElseThrow(() -> new ResourceNotFoundException("User Story not found"));
-        Epic epic = epicRepository.findById(epicId)
-                .orElseThrow(() -> new ResourceNotFoundException("Epic not found"));
-        if (story.getStatus() != UserStoryStatus.TODO) {
-            throw new BusinessException("Cannot link an epic to a user story with status higher than TODO");
-        }
+        UserStory story = repositoryHelper.findUserStoryById(storyId);
+        Epic epic = repositoryHelper.findEpicById(epicId);
+        validator.validateCanLinkToEpic(story);
         story.setEpic(epic);
         return userStoryMapper.toResponse(userStoryRepository.save(story));
     }
@@ -150,10 +130,8 @@ public class UserStoryServiceImpl implements UserStoryService {
     @Override
     @Transactional
     public UserStoryResponse moveToSprint(UUID usId, UUID sprintId) {
-        UserStory us = userStoryRepository.findById(usId)
-                .orElseThrow(() -> new ResourceNotFoundException("User Story not found"));
-        SprintBacklog sprint = sprintBacklogRepository.findById(sprintId)
-                .orElseThrow(() -> new ResourceNotFoundException("Sprint Backlog not found"));
+        UserStory us = repositoryHelper.findUserStoryById(usId);
+        SprintBacklog sprint = repositoryHelper.findSprintBacklogById(sprintId);
         us.setSprintBacklog(sprint);
         us.setProductBacklog(null);
         return userStoryMapper.toResponse(userStoryRepository.save(us));
@@ -168,11 +146,10 @@ public class UserStoryServiceImpl implements UserStoryService {
      */
     @Override
     public List<AcceptanceCriteriaResponse> getAcceptanceCriteriasByUserStoryId(UUID id) {
-        UserStory us = userStoryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("User Story not found"));
+        UserStory us = repositoryHelper.findUserStoryById(id);
         return us.getAcceptanceCriterias().stream()
                 .map(acceptanceCriteriaMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -184,18 +161,13 @@ public class UserStoryServiceImpl implements UserStoryService {
     @Override
     public List<UserStoryResponse> getUserStoriesByStatusAndProductBacklogId(UserStoryStatus statut,
             UUID productBacklogId) {
-        if (statut == null) {
-            throw new IllegalArgumentException("Status is required");
-        }
-        if (productBacklogId == null) {
-            throw new IllegalArgumentException("Product Backlog ID is required");
-        }
-        productBacklogRepository.findById(productBacklogId)
-                .orElseThrow(() -> new ResourceNotFoundException("Product Backlog not found"));
+        Objects.requireNonNull(statut, "Status is required");
+        Objects.requireNonNull(productBacklogId, "Product Backlog ID is required");
+        repositoryHelper.validateProductBacklogExists(productBacklogId);
         return userStoryRepository.findByStatusAndProductBacklogId(statut, productBacklogId)
                 .stream()
                 .map(userStoryMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -206,15 +178,12 @@ public class UserStoryServiceImpl implements UserStoryService {
      */
     @Override
     public List<UserStoryResponse> getUserStoriesByEpicId(UUID epicId) {
-        if (epicId == null) {
-            throw new IllegalArgumentException("Epic ID is required");
-        }
-        epicRepository.findById(epicId)
-                .orElseThrow(() -> new ResourceNotFoundException("Epic not found"));
+        Objects.requireNonNull(epicId, "Epic ID is required");
+        repositoryHelper.findEpicById(epicId);
         return userStoryRepository.findByEpicId(epicId)
                 .stream()
                 .map(userStoryMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -225,13 +194,11 @@ public class UserStoryServiceImpl implements UserStoryService {
      */
     @Override
     public List<UserStoryResponse> getUserStoriesBySprintBacklogId(UUID sprintId) {
-        if (sprintId == null) {
-            throw new IllegalArgumentException("Sprint ID is required");
-        }
+        Objects.requireNonNull(sprintId, "Sprint ID is required");
         return userStoryRepository.findBySprintBacklogId(sprintId)
                 .stream()
                 .map(userStoryMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -239,17 +206,14 @@ public class UserStoryServiceImpl implements UserStoryService {
      * 
      * @param id the id of the user story to delete
      * @throws ResourceNotFoundException if the user story is not found
-     * @throws BusinessException         if the user story is not in TODO status
+     * @throws BusinessException         if the user story is not in TO_DO status
      */
     @Override
     @Transactional
     @LogOperation(description = "Deleting user story")
     public void delete(UUID id) {
-        UserStory story = userStoryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("User Story not found"));
-        if (story.getStatus() != UserStoryStatus.TODO) {
-            throw new BusinessException("Only stories in TODO state can be deleted.");
-        }
+        UserStory story = repositoryHelper.findUserStoryById(id);
+        validator.validateCanDelete(story);
         userStoryRepository.deleteById(id);
     }
 }
